# KukaYouBot

./: .gitignore  README.md
a_star_pathfinding/: CMakeLists.txt  package.xml
a_star_pathfinding/launch/: Untitled Document 1~
a_star_pathfinding/src/: a_star_pathfinding.cpp
action_controller/: CMakeLists.txt  package.xml
action_controller/launch/: default.launch  default.launch~
action_controller/src/: action_controller.cpp
audio_slave/: CMakeLists.txt
audio_slave/src/: audio_slave_node.cpp  hello_world_node.cpp~
blob_detector/: CMakeLists.txt  package.xml
blob_detector/launch/: standard.launch  standard.launch~
blob_detector/src/: blob_detector.cpp  blob_detector.cpp~
datamatrix_detector/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
datamatrix_detector/launch/: standard.launch  standard.launch~
datamatrix_detector/src/: datamatrix_detector.cpp
fabrik/: CMakeLists.txt  package.xml
fabrik/src/: fabrik.cpp  main.cpp
fabrik/src/components/: Arm.cpp  Arm.cpp.autosave  Joint.cpp  Link.cpp
fabrik/src/youbot/: youbot.cpp
gentoo/dev-libs/libskro/: Manifest  libskro-9999.ebuild
gentoo/dev-libs/libsoem/: Manifest  libsoem-9999.ebuild
gentoo/dev-libs/libtmcl/: Manifest  libtmcl-9999.ebuild
google_recognition/: CMakeLists.txt  CMakeLists.txt~  package.xml
google_recognition/cmake/: FindALSA.cmake  FindFLAC.cmake  FindFLAC.cmake~
google_recognition/include/google_recognition/: flac_encoder.h  jsonz.h  object.h  recognize.h  sprec.h  wav.h  web_client.h
google_recognition/src/: flac_encoder.c  flac_encoder.c~  jsonz.c  jsonz.c~  object.c  object.c~  recognize.c~  wav.c  wav.c~  web_client.c
hello_world/: CMakeLists.txt  CMakeLists.txt~  package.xml
hello_world/src/: hello_world_node.cpp
hsv_calibrator/: CMakeLists.txt  package.xml
hsv_calibrator/src/: hsv_calibrator.cpp
image_controller/: CMakeLists.txt  package.xml
image_controller/launch/: default.launch  default.launch~
image_controller/src/: image_controller.cpp
image_thresholder/: CMakeLists.txt  package.xml
image_thresholder/launch/: beer_can.launch  bolt.launch  laptop_case.launch  laptop_case.launch~  nut.launch  red_ball.launch  red_ball.launch~  red_tag.launch  red_tag.launch~
image_thresholder/src/: image_thresholder.cpp
libskro/: AUTHORS  Makefile.am  configure.ac
libskro/include/: skro.h
libskro/include/skro/: error.h  skro.h
libskro/src/: skro.c  skro.h
libsoem/: Makefile.am  configure.ac  soem.pc.in
libsoem/include/ethercat/: base.h  coe.h  config.h  config_list.h  dc.h  ethercat.h  foe.h  main.h  nicdrv.h  osal.h  oshw.h  print.h  soe.h  type.h
libsoem/src/: base.c  coe.c  config.c  dc.c  foe.c  main.c  nicdrv.c  osal.c  oshw.c  print.c  soe.c
libtmcl/: Makefile.am  configure.ac
libtmcl/include/tmcl/: tmcl.h  tmcl_defs.h
libtmcl/src/: tmcl.c
mcr_teleop/: CMakeLists.txt
mcr_teleop/ros/src/: teleop_keyboard_node.cpp
qtc/audio_slave/: CMakeCache.txt  CTestTestfile.cmake  Makefile  audio_slave.cbp  cmake_install.cmake
qtc/audio_slave/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
qtc/audio_slave/catkin_generated/installspace/: audio_slave.pc  audio_slaveConfig.cmake
qtc/audio_slave/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
qtc/audio_slave/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
qtc/google_recognition/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  google_recognition.cbp
qtc/google_recognition/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
qtc/google_recognition/catkin_generated/installspace/: google_recognition.pc  google_recognitionConfig.cmake
qtc/google_recognition/devel/: .catkin  .rosinstall  setup.sh
qtc/google_recognition/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
qtc/speech_recogniser/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  moc_speech_detector.cxx  moc_widget_h2sl.cxx  moc_widget_h2sl_comments.cxx  speech_recognizer.cbp
qtc/speech_recogniser/catkin_generated/: generate_cached_setup.py  ordered_paths.cmake  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
qtc/speech_recogniser/devel/: .catkin  .rosinstall  setup.sh
qtc/speech_recogniser/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
qtc_action_controller/: CMakeCache.txt  CTestTestfile.cmake  Makefile  action_controller.cbp  cmake_install.cmake
qtc_action_controller/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
qtc_action_controller/catkin_generated/installspace/: action_controller.pc  action_controllerConfig.cmake
qtc_action_controller/devel/: .catkin  .rosinstall  setup.sh
qtc_action_controller/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
speech_recognizer/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
speech_recognizer/cmake/: FindLCM.cmake~
speech_recognizer/include/speech_recognizer/: speech_detector.h~
speech_recognizer/src/: speech_detector.cc  speech_detector.h  speech_detector_demo.cc  speech_detector_demo.cc~  wav_file.cc  wav_file.cc~  wav_file.h  widget_h2sl.cc  widget_h2sl.cc~  widget_h2sl.h  widget_h2sl_comments.cc  widget_h2sl_comments.cc~  widget_h2sl_comments.h
task_manager/: CMakeLists.txt  CMakeLists.txt~  package.xml
task_manager/launch/: default.launch  default.launch~
task_manager/src/: task_manager.cpp
uva_at_work/: CMakeLists.txt  package.xml
uva_at_work/conf/: rviz_standard.rviz
uva_at_work/launch/: pick_and_place.launch  pick_and_place.launch~  pick_and_place_remote.launch  pick_and_place_remote.launch~
webcam/: CMakeLists.txt  CMakeLists.txt~  package.xml~
webcam/src/: webcam.cpp
webcam_controller/: CMakeLists.txt  package.xml  package.xml~
webcam_controller/launch/: gripper.launch  gripper.launch~
webcam_controller/src/: webcam_controller.cpp
(+27 files in other folders)
