lib_LTLIBRARIES = libsoem.la

libsoem_la_CFLAGS = -I$(top_srcdir)/include
libsoem_la_SOURCES = \
	src/ethercatbase.c \
	src/ethercatcoe.c \
	src/ethercatconfig.c \
	src/ethercatdc.c \
	src/ethercatfoe.c \
	src/ethercatmain.c \
	src/ethercatprint.c \
	src/ethercatsoe.c \
	src/nicdrv.c \
	src/osal.c \
	src/oshw.c

pkginclude_HEADERS = \
	include/ethercatbase.h \
	include/ethercatcoe.h \
	include/ethercatconfig.h \
	include/ethercatconfiglist.h \
	include/ethercatdc.h \
	include/ethercatfoe.h \
	include/ethercatmain.h \
	include/ethercatprint.h \
	include/ethercatsoe.h \
	include/ethercattype.h \
	include/nicdrv.h \
	include/osal.h \
	include/oshw.h

