lib_LTLIBRARIES = libsoem.la

libsoem_la_CFLAGS = -I$(top_srcdir)/include
libsoem_la_SOURCES = \
	src/base.c \
	src/coe.c \
	src/config.c \
	src/dc.c \
	src/foe.c \
	src/main.c \
	src/nicdrv.c \
	src/osal.c \
	src/oshw.c \
	src/print.c \
	src/soe.c

pkginclude_HEADERS = \
	include/base.h \
	include/coe.h \
	include/config.h \
	include/configlist.h \
	include/dc.h \
	include/foe.h \
	include/main.h \
	include/nicdrv.h \
	include/osal.h \
	include/oshw.h \
	include/print.h \
	include/soe.h \
	include/type.h

