lib_LTLIBRARIES = libsoem.la
ACLOCAL_AMFLAGS = -I m4

libsoem_la_CFLAGS = -I$(top_srcdir)/include
libsoem_la_SOURCES = \
	src/base.c \
	src/coe.c \
	src/config.c \
	src/dc.c \
	src/foe.c \
	src/main.c \
	src/nicdrv.c \
	src/osal.c \
	src/oshw.c \
	src/print.c \
	src/soe.c

pkginclude_HEADERS = \
	include/ethercat/base.h \
	include/ethercat/coe.h \
	include/ethercat/config.h \
	include/ethercat/config_list.h \
	include/ethercat/dc.h \
	include/ethercat/ethercat.h \
	include/ethercat/foe.h \
	include/ethercat/main.h \
	include/ethercat/nicdrv.h \
	include/ethercat/osal.h \
	include/ethercat/oshw.h \
	include/ethercat/print.h \
	include/ethercat/soe.h \
	include/ethercat/type.h

