# This file is part of libtmcl.
#
# libtmcl is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# libtmcl is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTIBILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# libtmcl. If not, see <http://www.gnu.org/licenses/>.

lib_LTLIBRARIES = libtmcl.la
ACLOCAL_AMFLAGS = -I m4

libtmcl_la_CFLAGS = -I${top_srcdir}/include
libtmcl_la_SOURCES = \
	src/tmcl.c

pkginclude_HEADERS = \
	include/tmcl/tmcl.h \
	include/tmcl/tmcl_defs.h

